--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <br>
     <a href="gayukova.vi/index.html">4st project</a><br>
     <br>
-    <a href="https://theartweb.github.io/Amazonka/">5st project</a><br>
+    <a href="https://theartweb.github.io/portfolio/">5st project</a><br>
+    <br>
+    <a href="https://theartweb.github.io/Amazonka">6st project</a><br>
     <br>
 </body>
 </html>
